# ros

./: .gdb_history  .gdbinit  .rustfmt.toml  123  Cargo.toml  Makefile
.cargo/: config  config.toml
kernel/: Cargo.toml  Makefile  build.rs  expanded.rs
kernel/.cargo/: config.toml
kernel/src/: batch.rs  config.rs  console.rs  cpu.rs  entry.S  lang_items.rs  link_app.S  linker.ld  logger.rs  main.rs  sbi.rs  utils.rs
kernel/src/collections/: memlist.rs
kernel/src/memory/: addr.rs  frame_allocator.rs  heap_allocator.rs  layout.rs  mod.rs  paging.rs
kernel/src/memory/paging/: mod.rs  physical_addr.rs  table.rs  virtual_addr.rs
kernel/src/syscall/: process.rs
kernel/src/trap/: NOTE  context.rs  mod.rs  trap.S  trap.asm
src/: arch.rs  assembly.rs  boot.S  console.rs  context.rs  cpu.rs  echo.rs  entry.asm  isa.rs  kernel.ld  linker.ld  log.rs  logger.rs  machine.rs  macros.rs  main.rs  sbi.rs  start.rs  uart.rs  utils.rs
src/allocator/: mod.rs
src/arch/: mod.rs
src/arch/riscv64/: mod.rs  sbi.rs
src/arch/riscv64/paging/: mod.rs
src/arch/riscv64/paging/sv39/: mod.rs  physical_addr.rs  virtual_addr.rs
src/asm/: boot.S  trap.S
src/collections/: memlist.rs  mod.rs
src/cpu/: mod.rs
src/drivers/: mod.rs
src/drivers/serial/: uart16550.rs
src/interrupt/: mod.rs
src/mem/: macros.rs  mod.rs
src/mem/paging/: entry.rs  mod.rs  physical_addr.rs  virtual_addr.rs
src/memory/: layout.rs  mod.rs  paging.rs
src/proc/: allocator.rs  mod.rs
src/syscall/: fs.rs
src/trap/: context.rs  mod.rs  trampoline.S  trap.asm  trapframe.rs
src/trap/exceptions/: breakpoint.rs  mod.rs
src/trap/interrupts/: mod.rs  plic.rs
src/trap/interrupts/clint/: mod.rs  software.rs  timer.rs
src/utils/: mod.rs
user_apps/: Cargo.toml  Makefile  build.rs
user_apps/.cargo/: config.toml
user_apps/src/: linker.ld
user_lib/: Cargo.toml
user_lib/src/: lang_items.rs  lib.rs  linker.ld  prelude.rs  syscall.rs
user_lib/src/memory/: layout.rs
