[package]
edition = "2018"
name = "ros"
version = "0.1.0"

[profile.release]
debug = true

[dependencies]
device_tree = {git = "https://github.com/rcore-os/device_tree-rs/"}
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
log = {version = "0.4.14", features = ["serde"]}
rustsbi = "0.2.0-alpha.4"
serde = {version = "1.0.126", default-features = false, features = ["derive"]}
spin = "0.9.1"
